crates/oxidd-derive/tests/countable/enum_repr_default.rs
use oxidd_derive::Countable;

#[derive(Countable)]
enum Tag {
    X,
}

fn main() {}
